# rusty-nailer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: error.rs  file.rs  lib.rs  main.rs  thumbnail.rs
