[package]
name = "rusty_nailer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
fast_image_resize = { version = "5.1.2", features = ["image"] }
image = { version = "0.25.5" }
jxl-oxide = { version = "0.11.2", features = ["image"] }
thumbnailify = "0.1.3"
thiserror = "2"

[features]
avif = ["image/avif-native"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
